--- a/index.html
+++ b/index.html
@@ -280,9 +280,7 @@
                 <div class="card">
                     <i class="fas fa-users card-icon"></i>
                     <h3>The Team</h3>
-                    <p>Founded by plant scientists and AI researchers, our team brings together decades of experience in
-                        both technology and botany. We're passionate about creating tools that make professional-grade
-                        plant care accessible to everyone.</p>
+                    <p>Founded by three simple students, Abhigya Bhandari, Rajbin Karki, Adiksh Silwal</p>
                 </div>
                 <div class="card">
                     <i class="fas fa-handshake card-icon"></i>
@@ -290,9 +288,8 @@
                     <p>Connect with other plant enthusiasts, share your growth results, and contribute to our expanding
                         database of plant knowledge.</p>
                     <div class="footer-links">
-                        <a href="#" class="footer-link"><i class="fab fa-facebook"></i> Facebook</a>
-                        <a href="#" class="footer-link"><i class="fab fa-twitter"></i> Twitter</a>
-                        <a href="#" class="footer-link"><i class="fab fa-instagram"></i> Instagram</a>
+                        <a href="https://x.com/Ta_pe_official" class="footer-link"><i class="fab fa-twitter"></i> Twitter</a>
+                        <a href="https://www.instagram.com/tape.vercel/" class="footer-link"><i class="fab fa-instagram"></i> Instagram</a>
                     </div>
                 </div>
             </div>
@@ -310,9 +307,6 @@
                     <a href="#" class="footer-link">Home</a>
                     <a href="#" class="footer-link">Simulator</a>
                     <a href="#" class="footer-link">Research</a>
-                    <a href="#" class="footer-link">Team</a>
-                    <a href="#" class="footer-link">Blog</a>
-                    <a href="#" class="footer-link">Contact</a>
                 </div>
                 <p class="copyright">© 2025 Technology Assisted Plant Emulator. All rights reserved.</p>
             </div>
