--- a/index.html
+++ b/index.html
@@ -281,18 +281,25 @@
                     <i class="fas fa-users card-icon"></i>
                     <h3>The Team</h3>
                     <p>Founded by three simple students, Abhigya Bhandari, Rajbin Karki, Adiksh Silwal</p>
-                </div>
-                <div class="card">
-                    <i class="fas fa-handshake card-icon"></i>
                     <h3>Join Our Community</h3>
                     <p>Connect with other plant enthusiasts, share your growth results, and contribute to our expanding
                         database of plant knowledge.</p>
                     <div class="footer-links">
-                        <a href="https://x.com/Ta_pe_official" class="footer-link"><i class="fab fa-twitter"></i> Twitter</a>
-                        <a href="https://www.instagram.com/tape.vercel/" class="footer-link"><i class="fab fa-instagram"></i> Instagram</a>
+                        <a href="https://x.com/Ta_pe_official" class="footer-link"><i class="fab fa-twitter"></i>
+                            Twitter</a>
+                        <a href="https://www.instagram.com/tape.vercel/" class="footer-link"><i
+                                class="fab fa-instagram"></i> Instagram</a>
                     </div>
                 </div>
+                <div class="card">
+                    <h3>Watch this video to learn more about us:<h3>
+                    <video class="team-video" controls>
+                        <source src="TAPE.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+
+                </div>
             </div>
+        </div>
         </div>
     </section>
 
@@ -334,6 +341,6 @@
     </div>
 
     <script src="script.js"></script>
-    </body>
+</body>
 
 </html>
